[package]
name = "packboiler-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
const_format = "0.2.35"
dialoguer = { version = "0.12.0", features = ["completion"] }
enumfmt = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.1"
serde_yaml = "0.9.34"
strum = { version = "0.27.2", features = ["derive"] }
